--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,3 @@
----
-version: "3.8"
-
 services:
   client:
     image: node:20.0.0-alpine
@@ -15,6 +12,9 @@ services:
 
   server:
     image: node:20.0.0-alpine
+    environment:
+      - MONGO_URL=mongodb://root:password@mongo:27017/app
+      - POSTGRES_URL=postgres://root:password@postgres:5432/app
     user: node
     tty: true
     stdin_open: true
@@ -24,4 +24,32 @@ services:
     ports:
       - 8000:8000
     volumes:
-      - ./server:/home/node
+      - ./server:/home/node/
+
+  postgres:
+    image: postgres
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+      - ./pg_hba.conf:/etc/postgresql/pg_hba.conf
+    environment:
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: app
+
+
+  mongo:
+    image: mongo
+    volumes:
+      - mongo-data:/data/db
+      - ./SampleCollections:/SampleCollections
+    ports:
+      - 127.0.0.1:27017:27017
+    working_dir: /home/node
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: password
+      MONGO_INITDB_DATABASE: app
+
+volumes:
+    postgres-data:
+    mongo-data:
