--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,18 @@
   "type": "module",
   "scripts": {
     "dev": "node --watch src/index.js",
+    "dev:nodemon": "nodemon -L src/index.js",
     "start": "node src/index.js"
   },
   "dependencies": {
-    "express": "4.19.2"
+    "csv-parser": "^3.0.0",
+    "express": "4.19.2",
+    "mongoose": "^8.4.1",
+    "pg": "^8.11.5",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.2"
   }
 }
