--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "csv-parser": "^3.0.0",
     "express": "4.19.2",
     "mongoose": "^8.4.1",
