--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,20 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "node --watch src/index.js",
-    "dev:nodemon": "nodemon -L src/index.js",
-    "start": "node src/index.js"
+    "dev": "node --watch --trace-warnings index.js",
+    "dev:nodemon": "nodemon -L index.js",
+    "start": "node index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "csv-parser": "^3.0.0",
+    "dotenv": "^16.4.5",
     "express": "4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
-    "pg": "^8.11.5",
+    "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3"
   },
