--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "node --watch src/index.js",
     "dev:nodemon": "nodemon -L src/index.js",
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "csv-parser": "^3.0.0",
+    "dotenv": "^16.4.5",
     "express": "4.19.2",
     "mongoose": "^8.4.1",
     "npm": "^10.8.1",
