create initial migration (wip)

--- a/server/.sequelizerc
+++ b/server/.sequelizerc
@@ -2,7 +2,7 @@ const path = require('path');
 
 
 module.exports = {
-  config: path.resolve('src/postgresql/config', 'config.js'),
+  config: path.resolve('src/postgresql/config', 'config.cjs'),
   'models-path': path.resolve('src/postgresql', 'models'),
   'seeders-path': path.resolve('src/postgresql', 'seeders'),
   'migrations-path': path.resolve('src/postgresql', 'migrations'),
