--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "ky": "^1.3.0",
     "tw-elements": "^2.0.0",
-    "vue": "^3.3.11"
+    "vue": "^3.3.11",
+    "vue-router": "^4.3.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
