--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "ky": "^1.3.0",
+    "pinia": "^2.1.7",
     "tw-elements": "^2.0.0",
     "vue": "^3.3.11",
     "vue-router": "^4.3.3"
