--- a/compose.yml
+++ b/compose.yml
@@ -6,8 +6,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - ./scripts/script.sql:/docker-entrypoint-initdb.d/script.sql
-     # - pg-data:/var/lib/postgresql/data
+      - pg-data:/var/lib/postgresql/data
   
   adminer:
     image: adminer
