--- a/server/package.json
+++ b/server/package.json
@@ -20,10 +20,12 @@
     "mongoose": "^8.4.1",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
+    "process": "^0.11.10",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.2",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "uuid": "^10.0.0"
   }
 }
