--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,8 @@
     "dev": "node --watch --trace-warnings index.js",
     "dev:nodemon": "nodemon -L index.js",
     "start": "node index.js",
-    "migrate": "docker compose exec server npx sequelize-cli db:migrate && docker compose exec server npx sequelize-cli db:seed:all",
-    "migrate-no-seed": "docker compose exec server npx sequelize-cli db:migrate"
+    "migrate": "npx sequelize-cli db:migrate:all",
+    "seed": "npx sequelize-cli db:seed:all"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -18,6 +18,7 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "4.19.2",
+    "fast-glob": "^3.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "pg": "^8.11.5",
