--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "ky": "^1.3.0",
+    "sweetalert2": "^11.12.0",
     "tw-elements": "^2.0.0",
     "vue": "^3.3.11",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
