--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,29 +5,24 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "develop" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "develop" ]
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: 20.0.0-alpine
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - name: Compile TypeScript
-      run: npm run compile
-    - run: npm run build --if-present
-    - run: npm test
+      - uses: actions/checkout@v4
+      - name: Use Node.js 20.0.0-alpine
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.0.0'
+          cache: 'npm'
+      - run: npm ci
+      - name: Compile TypeScript
+        run: npm run compile
+      - run: npm run build --if-present
+      - run: npm test
