--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "dotenv": "^16.4.5",
     "tailwindcss": "^3.4.3",
     "zod": "^3.23.8"
+  },
+  "scripts": {
+    "test": "echo \"No test specified\" && exit 0"
   }
 }
