--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "fast-glob": "^3.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
+    "nodemailer": "^6.9.14",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
     "process": "^0.11.10",
