--- a/compose.yml
+++ b/compose.yml
@@ -43,6 +43,7 @@ services:
   server:
     image: node:20.0.0-alpine
     environment:
+      - MAIL_KEY=${MAIL_KEY}
       - APP_BASE_URL=${APP_BASE_URL}
       - PORT=8000
       - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
