--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "4.19.2",
     "fast-glob": "^3.3.2",
+    "googleapis": "^140.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.14",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.2",
+    "resend": "^3.4.0",
     "sequelize-cli": "^6.6.2",
     "uuid": "^10.0.0"
   }
