--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "pinia": "^2.1.7",
     "sweetalert2": "^11.12.0",
     "tw-elements": "^2.0.0",
+    "uuid": "^10.0.0",
     "vue": "^3.3.11",
     "vue-router": "^4.3.3",
     "zod": "^3.23.8"
