--- a/client/admin/package.json
+++ b/client/admin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front",
+  "name": "admin",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,9 +12,8 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "ky": "^1.3.0",
     "pinia": "^2.1.7",
-    "sweetalert2": "^11.12.0",
+    "sweetalert2": "^11.6.13",
     "tw-elements": "^2.0.0",
-    "uuid": "^10.0.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
     "zod": "^3.23.8"
