--- a/compose.yml
+++ b/compose.yml
@@ -28,11 +28,15 @@ services:
     image: nginx:latest
     ports:
       - "80:80"
+    environment:
+      - ENV=${ENV}
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx:/etc/nginx/conf.d
     depends_on:
       - front
       - admin
+    command: /bin/bash -c "if [ $ENV = 'dev' ]; then cp /etc/nginx/conf.d/nginx.conf.local /etc/nginx/nginx.conf; else cp /etc/nginx/conf.d/nginx.conf.droplet /etc/nginx/nginx.conf; fi && nginx -g 'daemon off;'"
+
   front:
     image: node:20.0.0-alpine
     environment:
