--- a/compose.yml
+++ b/compose.yml
@@ -27,11 +27,12 @@ services:
   nginx:
     image: nginx:latest
     ports:
-      - "80:80"
+      - "8081:80"
     environment:
       - ENV=${ENV}
     volumes:
       - ./nginx:/etc/nginx/conf.d
+      - /etc/letsencrypt:/etc/letsencrypt
     depends_on:
       - front
       - admin
