--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "node --watch --trace-warnings index.js",
-    "dev:nodemon": "nodemon -L index.js",
+    "dev:nodemon": "nodemon -L --verbose index.js",
     "start": "node index.js",
     "migrate": "npx sequelize-cli db:migrate:all",
     "seed": "npx sequelize-cli db:seed:all"
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "4.19.2",
     "fast-glob": "^3.3.2",
+    "flowbite": "^2.4.1",
     "googleapis": "^140.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
