--- a/compose.yml
+++ b/compose.yml
@@ -42,6 +42,7 @@ services:
   
   server:
     image: node:20.0.0-alpine
+    restart: always
     environment:
       - MAIL_KEY=${MAIL_KEY}
       - APP_BASE_URL=${APP_BASE_URL}
