--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,10 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "4.19.2",
+    "express-useragent": "^1.0.15",
     "fast-glob": "^3.3.2",
     "flowbite": "^2.4.1",
+    "geoip-lite": "^1.4.10",
     "googleapis": "^140.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
@@ -28,6 +30,7 @@
     "pg-hstore": "^2.3.4",
     "process": "^0.11.10",
     "sequelize": "^6.37.3",
+    "useragent": "^2.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
