--- a/client/admin/package.json
+++ b/client/admin/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "ky": "^1.3.0",
     "pinia": "^2.1.7",
+    "jspdf": "^2.5.1",
     "sweetalert2": "^11.6.13",
     "tw-elements": "^2.0.0",
     "flowbite": "^2.4.1",
