--- a/compose.yml
+++ b/compose.yml
@@ -43,6 +43,7 @@ services:
     image: node:20.0.0-alpine
     environment:
       - VITE_API_BASE_URL=${API_BASE_URL}
+      - VITE_STRIPE_PUBLIC_KEY=${STRIPE_PUBLIC_KEY}
     user: node
     entrypoint: sh -c
     working_dir: /home/node/client/front
@@ -68,6 +69,7 @@ services:
     restart: always
     environment:
       - MAIL_KEY=${MAIL_KEY}
+      - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
       - APP_BASE_URL=${APP_BASE_URL}
       - PORT=8000
       - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
