--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "@stripe/stripe-js": "^4.1.0",
+    "@vue-stripe/vue-stripe": "^4.5.0",
     "dotenv": "^16.4.5",
     "tailwindcss": "^3.4.3",
+    "vue-stripe": "^0.1.52",
     "zod": "^3.23.8"
   },
   "scripts": {
