--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "nodemon": "^3.1.2",
     "resend": "^3.4.0",
     "sequelize-cli": "^6.6.2",
+    "stripe": "^16.2.0",
     "uuid": "^10.0.0"
   }
 }
