--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "googleapis": "^140.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
