--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cron": "^3.1.7",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "4.19.2",
@@ -25,7 +26,6 @@
     "googleapis": "^140.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
-    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
