--- a/client/front/package.json
+++ b/client/front/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "chart.js": "^4.4.3",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^3.6.0",
     "flowbite": "^2.4.1",
     "jspdf": "^2.5.1",
     "ky": "^1.3.0",
