--- a/client/front/package.json
+++ b/client/front/package.json
@@ -18,6 +18,7 @@
     "tw-elements": "^2.0.0",
     "uuid": "^10.0.0",
     "vue": "^3.4.29",
+    "vuetify": "^3.6.13",
     "vue-router": "^4.3.3",
     "zod": "^3.23.8"
   },
