--- a/client/front/package.json
+++ b/client/front/package.json
@@ -17,10 +17,12 @@
     "jspdf": "^2.5.1",
     "ky": "^1.3.0",
     "pinia": "^2.1.7",
-    "sweetalert2": "^11.12.0",
+    "sweetalert2": "^11.6.13",
     "tw-elements": "^2.0.0",
     "uuid": "^10.0.0",
-    "vue": "^3.4.29",
+    "vue": "^3.4.33",
+    "vue-chartjs": "^5.3.1",
+    "vue-grid-layout": "^2.4.0",
     "vue-router": "^4.3.3",
     "zod": "^3.23.8"
   },
