--- a/compose.yml
+++ b/compose.yml
@@ -70,6 +70,7 @@ services:
     environment:
       - MAIL_KEY=${MAIL_KEY}
       - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
+      - STRIPE_WEBHOOK_SECRET=${STRIPE_WEBHOOK_SECRET}
       - APP_BASE_URL=${APP_BASE_URL}
       - PORT=8000
       - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
