--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "dependencies": {
     "@stripe/stripe-js": "^4.1.0",
     "@vue-stripe/vue-stripe": "^4.5.0",
+    "chart.js": "^4.4.3",
     "dotenv": "^16.4.5",
     "tailwindcss": "^3.4.3",
+    "vue": "^3.4.33",
+    "vue-chartjs": "^5.3.1",
     "vue-stripe": "^0.1.52",
     "zod": "^3.23.8"
   },
