--- a/client/front/package.json
+++ b/client/front/package.json
@@ -4,9 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "test": "jest"
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -17,7 +15,7 @@
     "jspdf": "^2.5.1",
     "ky": "^1.3.0",
     "pinia": "^2.1.7",
-    "sweetalert2": "^11.12.0",
+    "sweetalert2": "^11.6.13",
     "tw-elements": "^2.0.0",
     "uuid": "^10.0.0",
     "vue": "^3.4.29",
@@ -25,11 +23,24 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-import-meta": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.24.7",
+    "@babel/preset-env": "^7.24.8",
     "@stripe/stripe-js": "^4.1.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "@vue/cli-plugin-unit-jest": "^5.0.8",
+    "@vue/compiler-sfc": "^3.4.34",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/vue3-jest": "^27.0.0",
     "autoprefixer": "^10.4.19",
+    "babel-jest": "^27.5.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.5.1",
+    "jest-environment-jsdom": "^27.5.1",
+    "jest-fetch-mock": "^3.0.3",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
+    "ts-jest": "^27.1.5",
     "vite": "^5.3.1"
   }
 }
